# FairyClaw

./: .gitignore  AI_SYSTEM_GUIDE.md  CONTRIBUTING.md  DEPLOY.md  LAYOUT.md  LICENSE  README.md  main.py  pyproject.toml  reins.yaml
.github/workflows/: release-github.yml
config/: fairyclaw.env.example  llm_endpoints.yaml.example
deploy/: Dockerfile  docker-compose.yml  fairyclaw.service
docs/: GATEWAY_ENVELOPE.md
fairyclaw/: __init__.py  cli.py  main.py  session_history_utils.py
fairyclaw/api/: dependencies.py
fairyclaw/api/outbound/: __init__.py
fairyclaw/api/schemas/: chat.py  common.py  files.py  sessions.py
fairyclaw/bridge/: __init__.py  bridge_memory.py  gateway_control.py  user_gateway.py  ws_server.py
fairyclaw/capabilities/agent_tools/: manifest.json
fairyclaw/capabilities/code_repair_ops/: config.py  manifest.json
fairyclaw/capabilities/compression_hooks/: config.yaml  manifest.json
fairyclaw/capabilities/core_ops/: config.py  manifest.json
fairyclaw/capabilities/image_ops/: config.py  manifest.json
fairyclaw/capabilities/memory_hooks/: config.yaml  manifest.json
fairyclaw/capabilities/rag_hooks/: config.yaml  manifest.json
fairyclaw/capabilities/routing_hooks/: manifest.json
fairyclaw/capabilities/runtime_event_hooks/: manifest.json
fairyclaw/capabilities/session_memory/: config.py  config.yaml  manifest.json
fairyclaw/capabilities/sourced_research/: config.py  manifest.json
fairyclaw/config/: __init__.py  loader.py  locations.py  settings.py
fairyclaw/config_templates/: fairyclaw.env.example  llm_endpoints.yaml.example
fairyclaw/core/: domain.py
fairyclaw/gateway/: __init__.py  main.py  route_store.py  runtime.py
fairyclaw/headless/: __init__.py  one_shot.py
fairyclaw/infrastructure/: logging_setup.py  uri_paths.py
fairyclaw/runtime/: __init__.py  lifecycle.py
fairyclaw/sdk/: __init__.py  events.py  group_runtime.py  hooks.py  ir.py  runtime.py  subtasks.py  timers.py  tools.py  types.py
fairyclaw/tools/: __init__.py  runtime.py
scripts/: test_system_flow.py
tests/: test_bridge_memory.py  test_capability_vectorstore_ids.py  test_cli_benchmark_channel.py  test_control_envelope.py  test_custom_runtime_events.py  test_embedding_service.py  test_event_usage_repository.py  test_extraction_checkpoint_state.py  test_file_id_normalization.py  test_force_finish_short_circuit.py  test_format_answer_with_citations.py  test_gap_repair_state.py  test_gateway_file_service.py  test_gateway_protocol_models.py  test_gateway_route_repository.py  test_get_context_db.py  test_history_mapper_ir.py  test_hook_payload_models.py  test_image_edit_transport.py  test_image_ops_tools.py  test_llm_client_response_parsing.py  test_llm_image_client_request.py  test_llm_image_profile_config.py  test_llm_message_assembler_ir.py  test_loader_env.py  test_locations_and_env_normalize.py  test_memory_extraction_heuristics.py  test_memory_hooks_vectorstore.py  test_memory_pre_context.py  test_onebot_session_management.py  test_persistent_memory_contract.py  test_runtime_file_delivery.py  test_safe_filesystem_path.py  test_session_history_utils.py  test_session_message_block.py  test_session_runtime_store.py  test_system_prompts_language.py  test_timer_job_repository.py  test_timer_models.py  test_token_counter.py  (+5 more)
web/: .env.example  index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  constants.ts  index.css
(+160 files in other folders)
