[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fairyclaw"
version = "0.1.31"
description = "FairyClaw server-side agent runtime"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Zhang Xi", email = "3478936082@qq.com" },
  { name = "Ding Siyi", email = "2500012926@stu.pku.edu.cn" },
]
maintainers = [
  { name = "Zhang Xi", email = "3478936082@qq.com" },
]
keywords = [
  "agent",
  "llm",
  "async",
  "fastapi",
  "fairyclaw",
  "automation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.30",
  "aiosqlite>=0.20.0",
  "pydantic-settings>=2.3.4",
  "httpx>=0.27.0",
  "websockets>=16.0",
  "aiofiles>=24.1.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.2",
  "ddgs",
  "beautifulsoup4>=4.12.0",
  "filetype>=1.2.0",
  "qdrant-client>=1.10.1",
  "tiktoken>=0.7.0",
  "openai>=1.51.0",
  "reins",
]

[project.optional-dependencies]
# Local neural embeddings (pulls PyTorch + sentence-transformers; not required for hashing or API embeddings).
embedding-local = ["sentence-transformers>=3.0.1"]

[project.scripts]
fairyclaw = "fairyclaw.cli:main"

[project.urls]
Homepage = "https://github.com/PKULab1806/FairyClaw"
Repository = "https://github.com/PKULab1806/FairyClaw"
Documentation = "https://github.com/PKULab1806/FairyClaw#readme"

# List only ["fairyclaw"] omits subpackages (fairyclaw.config, fairyclaw.core, …) from the wheel.
[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fairyclaw*"]

[tool.setuptools.package-data]
fairyclaw = ["web_dist/**", "config_templates/**", "capabilities/**"]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 16000
